Fixed layout issues.

--- a/app/css/_04-elements.scss
+++ b/app/css/_04-elements.scss
@@ -19,7 +19,7 @@ body {
   color: $light-slate;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 1.2;
 }
 
@@ -27,7 +27,7 @@ h1 {
   text-align: center;
   margin: 0 auto;
   font-family: "Courgette";
-  font-size: 4.8rem;
+  font-size: 4.3rem;
 }
 
 span {
