--- a/app/css/_05-objects.scss
+++ b/app/css/_05-objects.scss
@@ -12,7 +12,7 @@
 }
 
 .banner {
-  padding: 2rem 0;
+  padding: 1.3rem 0;
   background-color: $lightest-navy;
   background-size: cover;
 }
