--- a/app/css/_comp-generate.scss
+++ b/app/css/_comp-generate.scss
@@ -3,9 +3,9 @@
   background-color: $light-slate;
   border-radius: 25px;
   box-shadow: 0 0 8px $green;
-  margin: 2rem auto;
+  margin: 1.5rem auto;
   display: inline-block;
-  max-height: 627px;
+  height: 580px;
 }
 
 .tool__content {
@@ -99,14 +99,14 @@
   }
   @media screen and(min-width:410px) {
     .tool__selection {
-      width: 8rem;
-      height: 8rem;
+      width: 6rem;
+      height: 6 rem;
     }
   }
   @media screen and(min-width:900px) {
     .tool__selection {
-      width: 12rem;
-      height: 12rem;
+      width: 9rem;
+      height: 9rem;
     }
   }
 }
@@ -124,7 +124,7 @@
   margin-top: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1rem 3rem;
+  gap: 0.5rem 1rem;
 
   .tool__input-tiles {
     display: flex;
@@ -154,34 +154,24 @@
 }
 
 .tool__sizes {
-  margin: 0.1rem 1rem;
+  margin: 0.1rem 1rem 0.7rem 1rem;
   .tool__radios {
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     label {
-      font-size: 1.5rem;
+      font-size: 1.1rem;
       padding: 0 1rem 0 0;
       &:hover {
         color: $green;
-        font-weight: bold;
       }
     }
-  }
-}
-
-@media screen and(min-width:460px) {
-  .tool__sizes {
-    .tool__radios {
+    .radio-group {
+      display: flex;
       flex-flow: row;
+      justify-content: center;
+      align-items: center;
     }
-  }
-}
-
-.tool__footer {
-  button {
-    display: inline-block;
-    text-align: center;
   }
 }
