--- a/app/css/import.css
+++ b/app/css/import.css
@@ -366,7 +366,7 @@ body {
   background-size: 100vw 130vh;
   color: #a8b2d1;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 1.2;
 }
 
@@ -374,7 +374,7 @@ h1 {
   text-align: center;
   margin: 0 auto;
   font-family: "Courgette";
-  font-size: 4.8rem;
+  font-size: 4.3rem;
 }
 
 span {
@@ -429,7 +429,7 @@ input {
 }
 
 .banner {
-  padding: 2rem 0;
+  padding: 1.3rem 0;
   background-color: #233554;
   background-size: cover;
 }
@@ -641,9 +641,9 @@ input {
   border-radius: 25px;
   -webkit-box-shadow: 0 0 8px #62ffda;
           box-shadow: 0 0 8px #62ffda;
-  margin: 2rem auto;
+  margin: 1.5rem auto;
   display: inline-block;
-  max-height: 627px;
+  height: 580px;
 }
 
 .tool__content {
@@ -767,15 +767,15 @@ input {
 
 @media screen and (min-width: 410px) {
   .tool__screens .tool__selection {
-    width: 8rem;
-    height: 8rem;
+    width: 6rem;
+    height: 6 rem;
   }
 }
 
 @media screen and (min-width: 900px) {
   .tool__screens .tool__selection {
-    width: 12rem;
-    height: 12rem;
+    width: 9rem;
+    height: 9rem;
   }
 }
 
@@ -794,7 +794,7 @@ input {
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
-  gap: 1rem 3rem;
+  gap: 0.5rem 1rem;
 }
 
 .tool__tiles .tool__input-tiles {
@@ -828,46 +828,47 @@ input {
 }
 
 .tool__sizes {
-  margin: 0.1rem 1rem;
+  margin: 0.1rem 1rem 0.7rem 1rem;
 }
 
 .tool__sizes .tool__radios {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+      -ms-flex-flow: row;
+          flex-flow: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .tool__sizes .tool__radios label {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   padding: 0 1rem 0 0;
 }
 
 .tool__sizes .tool__radios label:hover {
   color: #62ffda;
-  font-weight: bold;
 }
 
-@media screen and (min-width: 460px) {
-  .tool__sizes .tool__radios {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row;
-            flex-flow: row;
-  }
-}
-
-.tool__footer button {
-  display: inline-block;
-  text-align: center;
+.tool__sizes .tool__radios .radio-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=import.css.map */
